--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 * {
-    /** Idk about this font*/
+    /** Idk about this font !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
     --navBarFont: Tahoma;
     --subHeadingFont: calibri;
     font-family: 'Roboto', sans-serif;
@@ -19,9 +19,55 @@ html {
     scroll-behavior: smooth;
 }   
 
+/** In the Future implement JS to do Dark Mode:
 body {
+    background-color: black;
+}
+
+p, h1, h2, h3 {
+    color: white;
+}*/
+
+/** Home Page only CSS */
+#homeBody {
     display: grid;
-    grid-template: 1fr / 1fr 3fr 1fr / 1fr;
+    grid-template-areas:
+    "bannerImg bannerImg bannerImg"
+    "about about aboutImg"
+    "resumeLeft resume resumeRight"
+    "projects projects projects"
+    "fotter footer footer";
+
+    grid-template-columns: 100% /
+                        25% 1fr 25% /
+                        auto 1fr auto /
+                        auto 1fr auto /
+                        auto 1fr auto;
+    grid-template-rows: 1fr / 1fr / 1fr;
+                           
+                           
+                           
+    grid-column-gap: 0.2vw;
+}
+
+#bannerImg {
+    grid-area: bannerImg;
+}
+
+#about {
+    grid-area: about;
+}
+
+#about picture {
+    grid-area: aboutImg;
+}
+
+#resume {
+    grid-area: resume;
+}
+
+#projects {
+    grid-area: projects;
 }
 
 h1 {
@@ -34,6 +80,18 @@ h1 {
     height: 100vh;
 }
 
+/** General CSS */
+footer {
+    grid-area: footer;
+}
+
+
+
+
+/** Other Page only CSS */
+body:not(#homeBody) {
+
+}
 
 /** General Navigation */
 
