--- a/main.css
+++ b/main.css
@@ -1,13 +1,16 @@
 :root {
     /** Idk about this font !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
-    --navBarFont: Tahoma;
+    --navBarFont: 'Lato', Tahoma;
+    --headingFont: 'Dancing Script', cursive, sans;
     --subHeadingFont: calibri;
     /** Default Font */
     font-family: 'Roboto', sans-serif;
+    font-size: 16px;
 
     --navColorPrimary: #009efa;
     --navColorSecondary: rgb(0, 101, 168);
-    --navFontHover: #f6f647;
+    --navFontHover: #ffd000;
+    --navBackgroundHover: #0300a1b7;
 
     --backgroundLight: #FFF;
     --backgroundDark: #000;
@@ -24,44 +27,77 @@ html {
 }   
 
 /** In the Future implement JS to do Dark Mode:
+    // I just need to swap the backgroundDark and backgroundLight variables
+    // to flip the color scheme. And add these two lines:
 body {
-    background-color: black;
+    background-color: var(--backgroundLight);
 }
 
-p, h1, h2, h3 {
-    color: white;
+* {
+    color: var(--backgroundDark);
 }*/
 
-/** Home-Page Specific CSS CSS */
-
-#homeHeader h1 {
-    display: none;
+/** Home-Page Related CSS */
+section {
+    display: inline-block;
+    margin-top: 0;
+    margin-left: 5rem;
+    margin-right: 2 rem;
+    margin-bottom: 5rem;
+    scroll-margin-top: 10ch;
 }
 
-h1 {
-    font-weight: 300;
-    position: static;
-    text-align: center;
-    display: block;
-    top: 8rem;
-    padding-bottom: 2rem;
-    background-color: rgb(141, 208, 255);
+p {
+    font-size: 1.2rem;
+    margin: 0.8rem;
+}
+
+aside {
+    margin-left: 5rem;
+    float: right;
 }
 
 #homeHeader picture img {
+    position: staic;
     width: 100%;
     height: 100%;
 }
-section {
-    max-width: 100%;
+
+em {
+    font-style: unset;
+    font-weight: 1000;
+    color: var(--navColorPrimary);
 }
 
-/** General CSS */
+h2 {
+    margin-bottom: 1ch;
+    font-family: var(--subHeadingFont);
+    font-size: 3rem;
+}
 
+/** Notes & Experiments Related CSS */
+h1 {
+    font-family: var(--headingFont);
+    font-weight: 300;
+    font-size: 3rem;
+    position: static;
+    text-align: justify;
 
-/** Notes Page CSS */
+    padding-top: 3rem;
+    padding-left: 4rem;
+    padding-bottom: 1rem;
+    background: radial-gradient(rgb(221, 202, 141), rgb(199, 185, 128)); 
+}
+
+h3 {
+    font-size: 1.5rem;
+    font-family: var(--subHeadingFont);
+    margin: 0.8rem;
+}
+
 td {
-    border: solid --backgroundDark;
+    padding: 2ch 2ch 2ch 3ch;
+    border: solid var(--backgroundDark);
 }
 
 th {
@@ -84,17 +120,42 @@ th {
     background-color: lightYellow;
 }
 
-/** Other Page only CSS */
+/** Non-Home Page only CSS */
+/* - I implemented a Grid that simply splits all sections into 2 columns
+ * for easier navigation; but will combine to single column if device gets
+ * small enough for tablet or mobile
+ */
 body:not(#homeBody) {
-
+    display: grid;
+    grid-auto-rows: auto;
+    grid-template-columns: 1fr 1fr ;
 }
 
-/** Notes Page Stuff */
+header:not(#homeHeader) {
+    display: grid;
+    grid-column: 1 / 3
+}
 
+body:not(#homeBody) section:nth-child(even) {
+    grid-column: 1 / 2;
+}
 
+body:not(#homeBody) section:nth-child(odd) {
+    grid-column: 2 / 3;
+}
 
-/** General Navigation */
+body:not(#homeBody) footer {
+    grid-column: 1 / 3
+}
 
+header:not(#homeHeader) p {
+    text-align: left;
+    padding: 0 0 1rem 1.5rem;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+/** All Devices Navigation */
 header {
     text-align: center;
 }
@@ -104,9 +165,9 @@ nav ul li {
 }
 
 /** Desktop Navigation */
-@media screen and (min-width: 868px) {
+@media screen and (min-width: 1000px) {
     html {
-        /** We can't see the space covered by Nav */
+        /** We can't see the space covered by Nav, so resize page */
         margin-top: calc(12px + 2.5vw);
     }
 
@@ -116,12 +177,19 @@ nav ul li {
         display: block;
         text-decoration: none;
         font-weight: 1000;
-        color: var(--fontColor);
+        /* Color background when hovering a navlink*/
+        padding-top: calc((12px + 2.5vw)/4 + 1px);
+        padding-bottom: 0;
+        padding-left: 1ch;
+        padding-right: 1ch; 
+        color: var(--backgroundDark);
     }
 
     nav ul li a:hover {
-        color: rgb(239, 5, 5);
+        color: var(--navFontHover);
         transition: color 0.2s ease-in;
+        background-color: var(--navBackgroundHover);
+        transition: background-color 0.1s linear;
     }
     
     nav {
@@ -130,22 +198,19 @@ nav ul li {
         width: 100%;
         height: calc(12px + 2.5vw);
         background: linear-gradient(var(--navColorSecondary), var(--navColorPrimary));
-    
     }
 
     header nav ul {
-        display: flex;
-        justify-content: space-evenly;
-        margin: 0.5ch;
+        gap: 5px;
     }
 }
 
 /** Tablet Navigation */
-@media mobile, (max-width: 868px) {
+@media mobile, (max-width: 1000px) {
 
 }
 
 /** mobile Navigation */
-@media mobile and (max-width: 480px) {
+@media mobile and (max-width: 500px) {
     
 }
