--- a/main.css
+++ b/main.css
@@ -122,7 +122,7 @@ th {
 /** Non-Home Page only CSS */
 /* - I implemented a Grid that simply splits all sections into 2 columns
  * for easier navigation; but will combine to single column if device gets
- * small enough for tablet or mobile
+ * small enough for tablet or mobile. (Rest in screen size @media)
  */
 body:not(#homeBody) {
     display: grid;
@@ -146,9 +146,13 @@ header:not(#homeHeader) p {
     font-weight: 600;
 }
 
+/** Shared Navigation between Screen Sizes */
+header nav ul {
+    gap: 5px;
+}
 
-/** Desktop Navigation */
-@media screen and (min-width: 1000px) {
+/** Desktop Screen */
+@media (min-width: 1500px) {
     html {
         /** We can't see the space covered by Nav, so resize page */
         margin-top: calc(12px + 2.5vw);
@@ -160,6 +164,7 @@ header:not(#homeHeader) p {
         display: block;
         text-decoration: none;
         font-weight: 1000;
+
         /* Color background when hovering a navlink*/
         padding-top: calc((12px + 2.5vw)/4 + 1px);
         padding-bottom: 0;
@@ -168,23 +173,12 @@ header:not(#homeHeader) p {
         color: var(--backgroundDark);
     }
 
-    nav ul li a:hover {
-        color: var(--navFontHover);
-        transition: color 0.2s ease-in;
-        background-color: var(--navBackgroundHover);
-        transition: background-color 0.1s linear;
-    }
-    
-    nav {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        height: calc(12px + 2.5vw);
-        background: linear-gradient(var(--navColorSecondary), var(--navColorPrimary));
-    }
-
-    header nav ul {
-        gap: 5px;
+    nav {	
+        position: fixed;	
+        top: 0;	
+        width: 100%;	
+        height: calc(12px + 2.5vw);	
+        background: linear-gradient(var(--navColorSecondary), var(--navColorPrimary));	
     }
 
     body:not(#homeBody) section:nth-child(even) {
@@ -203,15 +197,27 @@ header:not(#homeHeader) p {
         display: inline-block;
     }
 
-    #hamburger {
+    nav ul li a:hover {
+        color: var(--navFontHover);
+        transition: color 0.2s ease-in;
+        background-color: var(--navBackgroundHover);
+        transition: background-color 0.1s linear;
+    }
+
+    .hamburger, a[href="openHamburger"], a[href="closeHamburger"]  {
         display: none;
     }
 }
 
-/** Small or Tablet Navigation */
+/** Small or Tablet Screen */
 /* NOTE TO SELF: If I'm changing these breakpoints, I also need to 
- * update the preload and media attributes for the banner images!!! */
-@media (max-width: 1000px) and (min-width: 700px) {
+ * update the preload and media attributes for the banner images in the HTML <head>!!!
+ *
+ * Also this media query is really complicated, but it's just trying to only
+ * run in scenarios where the other 2 are not already running, as doubling
+ * up is confusing to deal with. 
+ */
+@media (max-width: 1500px) and (min-width: 700px) {
     html {
         /** We can't see the space covered by Nav, so resize page */
         margin-top: calc(12px + 2.5vw);
@@ -223,6 +229,7 @@ header:not(#homeHeader) p {
         display: block;
         text-decoration: none;
         font-weight: 1000;
+        
         /* Color background when hovering a navlink*/
         padding-top: 0;
         padding-bottom: calc((12px + 2.5vw)/4);
@@ -231,23 +238,12 @@ header:not(#homeHeader) p {
         color: var(--backgroundDark);
     }
 
-    nav ul li a:hover {
-        color: var(--navFontHover);
-        transition: color 0.2s ease-in;
-        background-color: var(--navBackgroundHover);
-        transition: background-color 0.1s linear;
-    }
-    
-    nav {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        height: calc(12px + 2.5vw);
-        background: linear-gradient(var(--navColorSecondary), var(--navColorPrimary));
-    }
-
-    header nav ul {
-        gap: 5px;
+    nav {	
+        position: fixed;	
+        top: 0;	
+        width: 100%;	
+        height: calc(12px + 2.5vw);	
+        background: linear-gradient(var(--navColorSecondary), var(--navColorPrimary));	
     }
 
     body:not(#homeBody) section {
@@ -262,16 +258,31 @@ header:not(#homeHeader) p {
         display: inline-block;
     }
 
-    #hamburger {
+    nav ul li a:hover {
+        color: var(--navFontHover);
+        transition: color 0.2s ease-in;
+        background-color: var(--navBackgroundHover);
+        transition: background-color 0.1s linear;
+    }
+
+    .hamburger, a[href="openHamburger"], a[href="closeHamburger"]  {
         display: none;
     }
 }
 
 /** Mobile Navigation */
-@media (max-width: 700px) {
+@media (mobile) or (max-width: 700px) {
+    /** Mobile wants to conserve as much space as possible */
     h2, h3, p, aside, section, picture {
-        padding: 0 !important;
-        margin: 0 !important;
+        padding: 0;
+        margin: 0;
+    }
+
+    /* iFrames will be replaced with picture elements that were previously display:hidden
+     * as most iframes do not render well on mobile
+     */
+    .iframeReplace {
+        
     }
 
     iframe {
@@ -280,30 +291,28 @@ header:not(#homeHeader) p {
 
     nav ul li a {
         font-family: var(--navBarFont);
-        font-size: calc(8px + 1.5vw);
+        font-size: 2rem;
         display: block;
+        width: 50vw;
         text-decoration: none;
         font-weight: 1000;
+
         /* Color background when hovering a navlink*/
-        padding-top: 0;
-        padding-bottom: calc((12px + 2.5vw)/4);
+        padding-top: 4vh;
+        padding-bottom: 2vh;
         padding-left: 1ch;
         padding-right: 1ch; 
         color: var(--backgroundDark);
     }
-    
+
     nav {
         position: fixed;
         top: 0;
         width: 100%;
-        height: calc(12px + 2.5vw);
+        height: 10vh;
         background: linear-gradient(var(--navColorSecondary), var(--navColorPrimary));
     }
-
-    header nav ul {
-        gap: 5px;
-    }
-
+    
     body:not(#homeBody) section {
         grid-column: 1 / 3;
     }
@@ -312,11 +321,58 @@ header:not(#homeHeader) p {
         text-align: left;
     }
 
-    nav ul li {
-        display: inline;
-    }
-
-    #hamburger {
+    /* Manipulate Hamburgers */
+    .open {
         display: block;
     }
+
+    .close {
+        display: none;
+    }
+
+    nav ul li {
+        display: block;
+    }
+
+    nav ul li {
+        color: var(--navFontHover);
+        transition: color 0.2s ease-in;
+        background-color: var(--navBackgroundHover);
+        transition: background-color 0.1s linear;
+        height: 0;
+    }
+
+    #openHamburger:target ~ div a[href="#openHamburger"] {
+        display: none;
+    }
+
+    #openHamburger:target ~ div a[href="#closeHamburger"] {
+        display: block;
+    }
+
+    /* Do CSS Wizardry */
+    #openHamburger:target ~ div li {
+        height: 100;
+    }
+
+    li a {
+        display: block;
+    }
+
+    a {
+        font-size: 10rem;
+    }
+    
+    .hamburger {
+        position: fixed;
+        width: 6vh;
+        height: 6vh;
+        top: 2vh;
+        right: 2vh;
+        display: block;
+        float: right;
+    }
+    /** Link to Stack Overflow where I learned these CSS shenanigans:
+     * https://stackoverflow.com/questions/42267467/how-to-toggle-effect-in-div-using-only-css
+     */
 }
