--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 :root {
     --navBarFont: 'Lato', Tahoma;
     --headingFont: 'Dancing Script', cursive, sans;
-    --subHeadingFont: calibri;
+    --subHeadingFont: calibri, sans-serif;
     /** Default Font */
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -204,7 +204,11 @@ header nav ul {
         transition: background-color 0.1s linear;
     }
 
-    .hamburger, a[href="openHamburger"], a[href="closeHamburger"]  {
+    #openHamburger, a[href="#openHamburger"], a[href="#closeHamburger"]  {
+        display: none;
+    }
+
+    .iframeReplace {
         display: none;
     }
 }
@@ -265,26 +269,32 @@ header nav ul {
         transition: background-color 0.1s linear;
     }
 
-    .hamburger, a[href="openHamburger"], a[href="closeHamburger"]  {
+    #openHamburger, a[href="#openHamburger"], a[href="#closeHamburger"]  {
+        display: none;
+    }
+
+    .iframeReplace {
         display: none;
     }
 }
 
 /** Mobile Navigation */
 @media (mobile) or (max-width: 700px) {
+    html {
+        /** We can't see the space covered by Nav, so resize page */
+        margin-top: 13vh;
+    }
+
     /** Mobile wants to conserve as much space as possible */
-    h2, h3, p, aside, section, picture {
+    h2, h3, p, aside, section, picture, nav {
         padding: 0;
         margin: 0;
+        max-width: 100%;
     }
 
     /* iFrames will be replaced with picture elements that were previously display:hidden
      * as most iframes do not render well on mobile
      */
-    .iframeReplace {
-        
-    }
-
     iframe {
         display: none;
     }
@@ -296,13 +306,19 @@ header nav ul {
         width: 50vw;
         text-decoration: none;
         font-weight: 1000;
+        max-width: 100%;
 
         /* Color background when hovering a navlink*/
         padding-top: 4vh;
         padding-bottom: 2vh;
         padding-left: 1ch;
-        padding-right: 1ch; 
+        padding-right: 0; 
+        margin: 0;
         color: var(--backgroundDark);
+    }
+
+    aside img {
+        width: 100%;
     }
 
     
@@ -310,73 +326,62 @@ header nav ul {
         grid-column: 1 / 3;
     }
     
-    /*
-    nav ul li {
-        color: var(--navFontHover);
-        transition: color 0.2s ease-in;
-        background-color: var(--navBackgroundHover);
-        transition: background-color 0.1s linear;
-        height: 0;
-    }
-
-    nav {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        height: 10vh;
-        background: linear-gradient(var(--navColorSecondary), var(--navColorPrimary));
-    }
-    
-    
     header {
         text-align: left;
     }
 
-    /* Manipulate Hamburgers 
-    .open {
+    /* Manipulate Hamburgers */
+    .hamToggleOn {
         display: block;
-    }
-
-    .close {
-        display: none;
-    }
-
-    nav ul li {
-        display: block;
-    }
-
-    
-
-    #openHamburger:target ~ div a[href="#openHamburger"] {
-        display: none;
-    }
-
-    #openHamburger:target ~ div a[href="#closeHamburger"] {
-        display: block;
-    }
-
-    /* Do CSS Wizardry 
-    #openHamburger:target ~ div li {
-        height: 100;
-    }
-
-    li a {
-        display: block;
-    }
-
-    a {
-        font-size: 10rem;
-    }
-    
-    .hamburger {
         position: fixed;
         width: 6vh;
         height: 6vh;
         top: 2vh;
         right: 2vh;
-        display: block;
+        margin-right: 4vh;
         float: right;
-    }*/
+        z-index: 9001;
+      }
+      .hamToggleOff {
+        display: none;
+        position: fixed;
+        width: 6vh;
+        height: 6vh;
+        top: 2vh;
+        right: 2vh;
+        margin-right: 4vh;
+        float: right;
+        z-index: 9001;
+      }
+
+      nav {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 13vh;
+        overflow: hidden;
+        transition: height 0.5s;
+        background: linear-gradient(var(--navColorSecondary), var(--navColorPrimary));
+      }
+      nav ul {
+        height:0vh;
+        display: block;
+      }
+      #openHamburger {
+        display:none;
+      }
+      
+      #openHamburger:target ~ a[href="#openHamburger"]{
+        display: none;
+      }
+      #openHamburger:target ~ a[href="#closeHamburger"]{
+        display: inline-block;
+      }
+      #openHamburger:target ~ nav {
+        height: 75vh;
+        background: linear-gradient(var(--navColorSecondary), var(--navColorPrimary));
+      }
+    
     /** Link to Stack Overflow where I learned these CSS shenanigans:
      * https://stackoverflow.com/questions/42267467/how-to-toggle-effect-in-div-using-only-css
      */
